--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "names_and_ranks = [for indice, city_name in ] # make sure the list is empty"
+    "names_and_ranks = [for indice, city_name in city_indices, ] # make sure the list is empty"
    ]
   },
   {
