--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "names_and_ranks = list[for indice, city_name in city_indices, city_names: print(indice+'.'+city_name) ] # make sure the list is empty"
+    "names_and_ranks = list[for indice, city_name in city_indices, city_names: print(str(indice)+'.'+city_name) ] # make sure the list is empty"
    ]
   },
   {
