--- a/index.ipynb
+++ b/index.ipynb
@@ -210,11 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-b7d654884502>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-b7d654884502>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = list[for indice, city_name in city_indices, city_names: print(str(indice)+'.'+city_name) ] # make sure the list is empty\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = list[for indice, city_name in city_indices, city_names: print(str(indice)+'.'+city_name) ] # make sure the list is empty"
    ]
