Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -224,6 +226,15 @@
    ],
    "source": [
     "names_and_ranks = list[for indice, city_name in city_indices, city_names: print(str(indice)+\".\"+city_name) ] # make sure the list is empty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FR"
    ]
   },
   {
