--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for indice, city_"
+    "for indice, city_name in "
    ]
   },
   {
