Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for indice, city_name in "
+    "for indice, city_name in city_indices, city_names"
    ]
   },
   {
