--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for indice, city_name in city_indices, city_names"
+    "for indice, city_name in city_indices, city_names:\n",
+    "    print(indice)\n",
+    "    print()"
    ]
   },
   {
