Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
     }
    ],
    "source": [
-    "for indice, city_name in city_indices, city_names:\n",
+    "for indice in city_indices, city_names:\n",
     "    print(indice)\n",
     "    print(city_name)"
    ]
