Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    ],
    "source": [
     "for indice in city_indices:\n",
-    "    for \n",
+    "    for city_name in city_name\n",
     "    print(indice)\n",
     "   "
    ]
