Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,8 +254,9 @@
    ],
    "source": [
     "for indice in city_indices:\n",
-    "    for city_name in city_name\n",
-    "    print(indice)\n",
+    "    for city_name in city_names:\n",
+    "    print(city_)\n",
+    "    \n",
     "   "
    ]
   },
