Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
    "source": [
     "for indice in city_indices:\n",
     "    for city_name in city_names:\n",
-    "    print(city_)\n",
+    "    print(city_name)\n",
     "    \n",
     "   "
    ]
