Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -253,7 +253,9 @@
     }
    ],
    "source": [
-    "for x\n",
+    "for indice in city_indices:\n",
+    "    for city_name in city_names:\n",
+    "    print(city_name)\n",
     "    \n",
     "   "
    ]
