Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    ],
    "source": [
     "for x in city_indices:\n",
-    "    print(x+'.'+)\n",
+    "    print(x+'.'+city_names[x])\n",
     "    \n",
     "   "
    ]
