--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = list[for indice, city_name in city_indices, city_names: print(str(indice)+\".\"+city_name) ] # make sure the list is empty"
+    "names_and_ranks = list[for indice, city_name in city_inames: print(str(indice)+\".\"+city_name) ] # make sure the list is empty"
    ]
   },
   {
