Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = list[for x in city_ind ] # make sure the list is empty"
+    "names_and_ranks = list[for x in city_indices: print(str(x+1)+'.') ] # make sure the list is empty"
    ]
   },
   {
