--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = list[for x in city_indices: print(str(x+1)+'.'+city_names[x])] # make sure the list is empty"
+    "names_and_ranks = list[print(str(x+1)+'.'+city_names[x]) for x in city_indices: ] # make sure the list is empty"
    ]
   },
   {
