--- a/index.ipynb
+++ b/index.ipynb
@@ -210,22 +210,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-846b1f1b9246>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-846b1f1b9246>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = list[print(str(x+1)+'.'+city_names[x]) for x in city_indices] # make sure the list is empty\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "names_and_ranks = list[print(str(x+1)+'.'+city_names[x]) for x in city_indices] # make sure the list is empty"
+    "names_and_ranks = [] # make sure the list is empty"
    ]
   },
   {
