--- a/index.ipynb
+++ b/index.ipynb
@@ -245,7 +245,7 @@
    ],
    "source": [
     "for x in city_indices:\n",
-    "    print(str(x+1)+'.'+city_names[x])\n",
+    "    names_and_ranks.append(str(x+1)+'.'+city_names[x])\n",
     "    \n",
     "   "
    ]
