Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,9 +226,7 @@
    "outputs": [],
    "source": [
     "for x in city_indices:\n",
-    "    names_and_ranks.append(str(x+1)+'.'+city_names[x])\n",
-    "    \n",
-    "   "
+    "    names_and_ranks.append(str(x+1)+'.'+city_names[x])  "
    ]
   },
   {
