--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for x in le"
+    "for x in list(range(0,))"
    ]
   },
   {
