Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for x in list(range(0,))"
+    "for x in list(range(0,len(cities))):\n",
+    "    "
    ]
   },
   {
