--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "source": [
     "city_populations = []\n",
     "for x in list(range(0,len(cities))):\n",
-    "    a = cities[x]"
+    "    a = cities[x]['']"
    ]
   },
   {
