--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,9 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for "
+    "for x in list(range(0,len(cities))):\n",
+    "    a = cities[x]['Areas']\n",
+    "    city_populations.append(a)"
    ]
   },
   {
