--- a/index.ipynb
+++ b/index.ipynb
@@ -428,15 +428,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for x in list(range(0,len(cities))):\n",
-    "    a = cities[x]['Areas']\n",
+    "    a = cities[x]['Area']\n",
     "    city_populations.append(a)"
    ]
   },
