--- a/index.ipynb
+++ b/index.ipynb
@@ -428,19 +428,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for x in list(range(0,len(cities))):\n",
     "    a = cities[x]['Area']\n",
-    "    city_populations.append(a)"
+    "    city_areas.append(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
           "12.Iguazu Falls"
          ],
          "type": "bar",
-         "uid": "d1caf0a8-330b-11e9-8682-a14cb55c1459",
+         "uid": "dbfc09c2-330b-11e9-8682-a14cb55c1459",
          "x": [
           "1.Buenos Aires",
           "2.Toronto",
@@ -544,7 +544,7 @@
           "12.Iguazu Falls"
          ],
          "type": "bar",
-         "uid": "d1caf36e-330b-11e9-8682-a14cb55c1459",
+         "uid": "dbfc0bf2-330b-11e9-8682-a14cb55c1459",
          "x": [
           "1.Buenos Aires",
           "2.Toronto",
@@ -559,16 +559,29 @@
           "11.Solta",
           "12.Iguazu Falls"
          ],
-         "y": []
+         "y": [
+          4758,
+          2731571,
+          3194,
+          200,
+          491,
+          3750,
+          68,
+          8300,
+          33,
+          27,
+          59,
+          672
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"60257ba7-ac0b-412d-aa6a-06b106f12eb3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"60257ba7-ac0b-412d-aa6a-06b106f12eb3\", [{\"name\": \"populations\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0, 4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"d1d24b3c-330b-11e9-8682-a14cb55c1459\"}, {\"name\": \"areas\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [], \"type\": \"bar\", \"uid\": \"d1d24d3a-330b-11e9-8682-a14cb55c1459\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"9f1f725d-fe72-4870-8bc4-08649fbec28b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9f1f725d-fe72-4870-8bc4-08649fbec28b\", [{\"name\": \"populations\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0, 4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"dc03813e-330b-11e9-8682-a14cb55c1459\"}, {\"name\": \"areas\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"dc038418-330b-11e9-8682-a14cb55c1459\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"60257ba7-ac0b-412d-aa6a-06b106f12eb3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"60257ba7-ac0b-412d-aa6a-06b106f12eb3\", [{\"name\": \"populations\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0, 4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"d1d24b3c-330b-11e9-8682-a14cb55c1459\"}, {\"name\": \"areas\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [], \"type\": \"bar\", \"uid\": \"d1d24d3a-330b-11e9-8682-a14cb55c1459\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"9f1f725d-fe72-4870-8bc4-08649fbec28b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9f1f725d-fe72-4870-8bc4-08649fbec28b\", [{\"name\": \"populations\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0, 4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"dc03813e-330b-11e9-8682-a14cb55c1459\"}, {\"name\": \"areas\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"dc038418-330b-11e9-8682-a14cb55c1459\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
